# sprint_7_fastapi_flask_integration

./: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
doc/fastapi/film/: swagger.yaml
doc/flask/user/: swagger.yaml
env.example/admin/: .env.dev
env.example/auth/oauth2/yandex/: .env.dev
env.example/docker/: .env.dev
env.example/flask/: .env.dev
env.example/jwt/: .env.dev
env.example/postgres/: .env.dev
env.example/redis/: .env.dev
etl/: Dockerfile  Dockerfile.dev  docker-entrypoint.dev.sh  main.py  pyproject.toml  settings.py
etl/src/: extract.py  load.py  transform.py
etl/utils/: db_connections.py  logger.py  mixin.py  state.py  validator.py
etl/utils/es_mapping/: es_actor_mapping.json  es_genre_mapping.json  es_search_mapping.json
fastapi/film/: Dockerfile  Dockerfile.dev  docker-entrypoint.dev.sh  docker-entrypoint.sh  main.py
fastapi/film/src/: docker-entrypoint.dev.sh  docker-entrypoint.sh  main.py  pyproject.toml
fastapi/film/src/api/v1/: actors.py  directors.py  films.py  genres.py  search.py  writers.py
fastapi/film/src/api/v1/queries/: film.py  genre.py  person.py  search.py
fastapi/film/src/api/v1/schemas/: film.py  genre.py  person.py  search.py
fastapi/film/src/core/: config.py  logger.py
fastapi/film/src/db/: elastic.py  redis.py
fastapi/film/src/models/: actor.py  director.py  film.py  genre.py  writer.py
fastapi/film/src/services/: collection.py  detail.py
fastapi/film/src/utils/: mixin.py  orjson.py  pagination.py  service.py
flask/: Dockerfile.dev  app.py  config.py  docker-entrypoint.dev.sh  pyproject.toml
flask/src/: alembic.ini
flask/src/api/v1/: auth.py  token.py
flask/src/api/v1/admin/: role.py  user.py
flask/src/databases/: cache.py  db.py
flask/src/dataclasses/: auth.py  payload.py  session.py
flask/src/decorators/: auth.py
flask/src/helpers/: request_body.py  request_user_agent.py
flask/src/migrations/: env.py
flask/src/models/: __init__.py  role.py  session.py  token.py  user.py
flask/src/repositories/: cache.py  jwt.py
flask/src/repositories/crud/: crud.py  crud_session.py  crud_token.py  crud_user.py
flask/src/schemas/: role.py  session.py  token.py  user.py
flask/src/services/: role.py  session.py  user.py
flask/tests/connections/: wait_for_postgres.py  wait_for_redis.py
flask/tests/functional/: conftest.py
flask/tests/functional/api/: test_auth.py
flask/tests/functional/api/admin/: test_role.py  test_user.py
flask/tests/unit/: conftest.py
flask/tests/unit/src/dataclasses/: test_auth.py  test_payload.py  test_session.py
flask/tests/unit/src/repositories/crud/: test_crud.py  test_crud_role.py
flask/tests/unit/test_data/dataclasses/: test_auth.py  test_payload.py  test_session.py
jsonschema/fastapi/film/: actor.json  director.json  film.json  genre.json  writer.json
nginx/: nginx.conf
nginx/conf.d/: fastapi.conf  flask.conf
postgres/film/: dump_09032023.sql  init.sql
